Milestone-VP Summary-Users-Admin

--- a/app/templates/user/dashboard.html
+++ b/app/templates/user/dashboard.html
@@ -35,7 +35,7 @@
         </tbody>
     </table>
     <hr class="my-5">
-    <h2 class="text-center text-primary mb-4">Book a Parking Spot</h2>
+    <h2 class="text-center text-primary mb-4">Book a New Parking Spot</h2>
     <table class="table table-bordered shadow">
         <thead class="table-secondary">
             <tr>
@@ -43,6 +43,7 @@
                 <th>Location</th>
                 <th>Address</th>
                 <th>Available Spot</th>
+                <th>Price Per Hour</th>
                 <th>Action</th>
             </tr>
         </thead>
@@ -53,6 +54,7 @@
                 <td>{{ lot.location_name }}</td>
                 <td>{{ lot.address }}</td>
                 <td>{{ lot.available_spots }}</td>
+                <td>{{ lot.price_per_hour }}</td>
                 <td>
                     {% if lot.available_spots > 0 %}
                     <a href="{{ url_for('book_spot', lot_id=lot.id) }}" class="btn btn-primary btn-sm">Book</a>
