some final changes

--- a/app/templates/user/dashboard.html
+++ b/app/templates/user/dashboard.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 <div class="container mt-4">
-    <h2 class="text-center text-primary mb-4">Recent Parking History</h2>
+    <h2 class="text-center text-primary mb-5 fw-bold text-decoration-underline">Recent Parking History</h2>
 
     {% if reservations %}
     <table class="table table-bordered shadow">
@@ -44,7 +44,7 @@
 
     <hr class="my-5">
 
-    <h2 class="text-center text-primary mb-4">Book a New Parking Spot</h2>
+    <h2 class="text-center text-primary mb-5 fw-bold text-decoration-underline">Book a New Parking Spot</h2>
 
     {% if lots %}
     <table class="table table-bordered shadow">
